# ModQL

./: .gitignore  AGENTS.md  Cargo.toml  README.md  justfile
docs/modql/: index.internal.md  index.md  module.modql.cli.internal.md  module.modql.cli.md  module.modql.convert.internal.md  module.modql.convert.md  module.modql.graph.internal.md  module.modql.graph.md  module.modql.model.internal.md  module.modql.model.md  module.modql.naming.internal.md  module.modql.naming.md  module.modql.render_md.internal.md  module.modql.render_md.md  module.modql.rustdoc_json.internal.md  module.modql.rustdoc_json.md  type-graph.md
src/: cli.rs  convert.rs  graph.rs  main.rs  model.rs  naming.rs  render_md.rs  rustdoc_json.rs
tests/: integration.rs
tests/fixtures/advanced/: Cargo.toml
tests/fixtures/advanced/src/: lib.rs
tests/fixtures/simple/src/: lib.rs  utils.rs
tests/fixtures/workspace/: Cargo.toml
tests/fixtures/workspace/core/src/: lib.rs
tests/golden/: index.md
tests/golden/advanced/: index.internal.md  index.md  type-graph.md
tests/golden/simple/: enum.simple.Format.md  function.simple.run.md  function.simple.utils.helper.md  index.internal.md  index.md  module.simple.utils.internal.md  module.simple.utils.md  struct.simple.Greeter.md  trait.simple.Render.md  type-graph.md
tests/golden/workspace-core/: index.internal.md  index.md  type-graph.md
tests/golden/workspace-service/: index.internal.md  index.md  module.service.handler.auth.internal.md  module.service.handler.auth.md  module.service.handler.internal.md  module.service.handler.md  type-graph.md
(+4 files in other folders)
