[package]
name = "modql"
version = "0.1.0"
edition = "2024"
description = "A docs.rs-like Markdown documentation generator for Rust projects, powered by rustdoc JSON"

[[bin]]
name = "modql"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rustdoc-types = "0.57"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
pretty_assertions = "1"
